src/tests/snapshots/pathos__tests__generation__generates_assignment_ir.snap
---
source: src/tests/generation.rs
expression: ir
---
segments:
  1:
    - Declare:
        - - a
          - 0
        - Literal: 1
    - Declare:
        - - $lit
          - 0
        - Literal: 1
    - Declare:
        - - b
          - 0
        - Add:
            - - a
              - 0
            - - $lit
              - 0
    - Return:
        - b
        - 0
root_segment_id: 1
