src/tests/snapshots/pathos__tests__generation__generates_declaration_ir.snap
---
source: src/tests/generation.rs
expression: ir
---
segments:
  1:
    - Declare:
        - - abc
          - 0
        - Literal: 1
    - Return:
        - abc
        - 0
root_segment_id: 1
