src/tests/snapshots/pathos__tests__generation__generates_if_ir.snap
---
source: src/tests/generation.rs
expression: ir
---
segments:
  1:
    - Declare:
        - - a
          - 0
        - Literal: 1
    - ConditionalJump:
        - - a
          - 0
        - 2
        - 3
  2:
    - Declare:
        - - $lit
          - 0
        - Literal: 10
    - Return:
        - $lit
        - 0
    - InconditionalJump: 3
  3:
    - Declare:
        - - $lit
          - 1
        - Literal: 20
    - Return:
        - $lit
        - 1
root_segment_id: 1
