src/tests/snapshots/pathos__tests__generation__generates_sum_ir.snap
---
source: src/tests/generation.rs
expression: ir
---
segments:
  1:
    - Declare:
        - - $lit
          - 0
        - Literal: 1
    - Declare:
        - - $lit
          - 1
        - Literal: 2
    - Declare:
        - - $add
          - 0
        - Add:
            - - $lit
              - 0
            - - $lit
              - 1
    - Return:
        - $add
        - 0
root_segment_id: 1
